@@ -3236,140 +3236,137 @@ cupsdWritePrintcap(void)
                        "# %s/printers.conf file.  All changes to this file\n"
 		       "# will be lost.\n", ServerRoot);
 
-  if (Printers)
+ /*
+  * Write a new printcap with the current list of printers.
+  */
+
+  switch (PrintcapFormat)
   {
-   /*
-    * Write a new printcap with the current list of printers.
-    */
+    case PRINTCAP_BSD :
+       /*
+	* Each printer is put in the file as:
+	*
+	*    Printer1:
+	*    Printer2:
+	*    Printer3:
+	*    ...
+	*    PrinterN:
+	*/
 
-    switch (PrintcapFormat)
-    {
-      case PRINTCAP_BSD :
-	 /*
-          * Each printer is put in the file as:
-	  *
-	  *    Printer1:
-	  *    Printer2:
-	  *    Printer3:
-	  *    ...
-	  *    PrinterN:
-	  */
+	if (DefaultPrinter)
+	  cupsFilePrintf(fp, "%s|%s:rm=%s:rp=%s:\n", DefaultPrinter->name,
+			 DefaultPrinter->info, ServerName,
+			 DefaultPrinter->name);
 
-          if (DefaultPrinter)
-	    cupsFilePrintf(fp, "%s|%s:rm=%s:rp=%s:\n", DefaultPrinter->name,
-	                   DefaultPrinter->info, ServerName,
-			   DefaultPrinter->name);
+	for (p = (cupsd_printer_t *)cupsArrayFirst(Printers);
+	     p;
+	     p = (cupsd_printer_t *)cupsArrayNext(Printers))
+	  if (p != DefaultPrinter)
+	    cupsFilePrintf(fp, "%s|%s:rm=%s:rp=%s:\n", p->name, p->info,
+			   ServerName, p->name);
+	break;
 
-	  for (p = (cupsd_printer_t *)cupsArrayFirst(Printers);
-	       p;
-	       p = (cupsd_printer_t *)cupsArrayNext(Printers))
-	    if (p != DefaultPrinter)
-	      cupsFilePrintf(fp, "%s|%s:rm=%s:rp=%s:\n", p->name, p->info,
-	                     ServerName, p->name);
-          break;
+    case PRINTCAP_PLIST :
+       /*
+	* Each printer is written as a dictionary in a plist file.
+	* Currently the printer-name, printer-info, printer-is-accepting-jobs,
+	* printer-location, printer-make-and-model, printer-state,
+	* printer-state-reasons, printer-type, and (sanitized) device-uri.
+	*/
 
-      case PRINTCAP_PLIST :
-         /*
-	  * Each printer is written as a dictionary in a plist file.
-	  * Currently the printer-name, printer-info, printer-is-accepting-jobs,
-	  * printer-location, printer-make-and-model, printer-state,
-	  * printer-state-reasons, printer-type, and (sanitized) device-uri.
-	  */
+	cupsFilePuts(fp, "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
+			 "<!DOCTYPE plist PUBLIC \"-//Apple Computer//DTD "
+			 "PLIST 1.0//EN\" \"http://www.apple.com/DTDs/"
+			 "PropertyList-1.0.dtd\">\n"
+			 "<plist version=\"1.0\">\n"
+			 "<array>\n");
 
-          cupsFilePuts(fp, "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
-	                   "<!DOCTYPE plist PUBLIC \"-//Apple Computer//DTD "
-			   "PLIST 1.0//EN\" \"http://www.apple.com/DTDs/"
-			   "PropertyList-1.0.dtd\">\n"
-			   "<plist version=\"1.0\">\n"
-			   "<array>\n");
+	for (p = (cupsd_printer_t *)cupsArrayFirst(Printers);
+	     p;
+	     p = (cupsd_printer_t *)cupsArrayNext(Printers))
+	{
+	  cupsFilePuts(fp, "\t<dict>\n"
+			   "\t\t<key>printer-name</key>\n"
+			   "\t\t<string>");
+	  write_xml_string(fp, p->name);
+	  cupsFilePuts(fp, "</string>\n"
+			   "\t\t<key>printer-info</key>\n"
+			   "\t\t<string>");
+	  write_xml_string(fp, p->info);
+	  cupsFilePrintf(fp, "</string>\n"
+			     "\t\t<key>printer-is-accepting-jobs</key>\n"
+			     "\t\t<%s/>\n"
+			     "\t\t<key>printer-location</key>\n"
+			     "\t\t<string>", p->accepting ? "true" : "false");
+	  write_xml_string(fp, p->location);
+	  cupsFilePuts(fp, "</string>\n"
+			   "\t\t<key>printer-make-and-model</key>\n"
+			   "\t\t<string>");
+	  write_xml_string(fp, p->make_model);
+	  cupsFilePrintf(fp, "</string>\n"
+			     "\t\t<key>printer-state</key>\n"
+			     "\t\t<integer>%d</integer>\n"
+			     "\t\t<key>printer-state-reasons</key>\n"
+			     "\t\t<array>\n", p->state);
+	  for (i = 0; i < p->num_reasons; i ++)
+	  {
+	    cupsFilePuts(fp, "\t\t\t<string>");
+	    write_xml_string(fp, p->reasons[i]);
+	    cupsFilePuts(fp, "</string>\n");
+	  }
+	  cupsFilePrintf(fp, "\t\t</array>\n"
+			     "\t\t<key>printer-type</key>\n"
+			     "\t\t<integer>%d</integer>\n"
+			     "\t\t<key>device-uri</key>\n"
+			     "\t\t<string>", p->type);
+	  write_xml_string(fp, p->sanitized_device_uri);
+	  cupsFilePuts(fp, "</string>\n"
+			   "\t</dict>\n");
+	}
+	cupsFilePuts(fp, "</array>\n"
+			 "</plist>\n");
+	break;
 
-	  for (p = (cupsd_printer_t *)cupsArrayFirst(Printers);
-	       p;
-	       p = (cupsd_printer_t *)cupsArrayNext(Printers))
-          {
-	    cupsFilePuts(fp, "\t<dict>\n"
-	                     "\t\t<key>printer-name</key>\n"
-			     "\t\t<string>");
-            write_xml_string(fp, p->name);
-	    cupsFilePuts(fp, "</string>\n"
-	                     "\t\t<key>printer-info</key>\n"
-			     "\t\t<string>");
-            write_xml_string(fp, p->info);
-	    cupsFilePrintf(fp, "</string>\n"
-	                       "\t\t<key>printer-is-accepting-jobs</key>\n"
-			       "\t\t<%s/>\n"
-			       "\t\t<key>printer-location</key>\n"
-			       "\t\t<string>", p->accepting ? "true" : "false");
-            write_xml_string(fp, p->location);
-	    cupsFilePuts(fp, "</string>\n"
-	                     "\t\t<key>printer-make-and-model</key>\n"
-			     "\t\t<string>");
-            write_xml_string(fp, p->make_model);
-	    cupsFilePrintf(fp, "</string>\n"
-	                       "\t\t<key>printer-state</key>\n"
-			       "\t\t<integer>%d</integer>\n"
-			       "\t\t<key>printer-state-reasons</key>\n"
-			       "\t\t<array>\n", p->state);
-            for (i = 0; i < p->num_reasons; i ++)
-	    {
-	      cupsFilePuts(fp, "\t\t\t<string>");
-	      write_xml_string(fp, p->reasons[i]);
-	      cupsFilePuts(fp, "</string>\n");
-	    }
-	    cupsFilePrintf(fp, "\t\t</array>\n"
-	                       "\t\t<key>printer-type</key>\n"
-			       "\t\t<integer>%d</integer>\n"
-	                       "\t\t<key>device-uri</key>\n"
-			       "\t\t<string>", p->type);
-            write_xml_string(fp, p->sanitized_device_uri);
-	    cupsFilePuts(fp, "</string>\n"
-	                     "\t</dict>\n");
-          }
-	  cupsFilePuts(fp, "</array>\n"
-	                   "</plist>\n");
-	  break;
+    case PRINTCAP_SOLARIS :
+       /*
+	* Each printer is put in the file as:
+	*
+	*    _all:all=Printer1,Printer2,Printer3,...,PrinterN
+	*    _default:use=DefaultPrinter
+	*    Printer1:\
+	*            :bsdaddr=ServerName,Printer1:\
+	*            :description=Description:
+	*    Printer2:
+	*            :bsdaddr=ServerName,Printer2:\
+	*            :description=Description:
+	*    Printer3:
+	*            :bsdaddr=ServerName,Printer3:\
+	*            :description=Description:
+	*    ...
+	*    PrinterN:
+	*            :bsdaddr=ServerName,PrinterN:\
+	*            :description=Description:
+	*/
 
-      case PRINTCAP_SOLARIS :
-	 /*
-          * Each printer is put in the file as:
-	  *
-	  *    _all:all=Printer1,Printer2,Printer3,...,PrinterN
-	  *    _default:use=DefaultPrinter
-	  *    Printer1:\
-	  *            :bsdaddr=ServerName,Printer1:\
-	  *            :description=Description:
-	  *    Printer2:
-	  *            :bsdaddr=ServerName,Printer2:\
-	  *            :description=Description:
-	  *    Printer3:
-	  *            :bsdaddr=ServerName,Printer3:\
-	  *            :description=Description:
-	  *    ...
-	  *    PrinterN:
-	  *            :bsdaddr=ServerName,PrinterN:\
-	  *            :description=Description:
-	  */
+	cupsFilePuts(fp, "_all:all=");
+	for (p = (cupsd_printer_t *)cupsArrayFirst(Printers);
+	     p;
+	     p = (cupsd_printer_t *)cupsArrayCurrent(Printers))
+	  cupsFilePrintf(fp, "%s%c", p->name,
+			 cupsArrayNext(Printers) ? ',' : '\n');
 
-          cupsFilePuts(fp, "_all:all=");
-	  for (p = (cupsd_printer_t *)cupsArrayFirst(Printers);
-	       p;
-	       p = (cupsd_printer_t *)cupsArrayCurrent(Printers))
-	    cupsFilePrintf(fp, "%s%c", p->name,
-	                   cupsArrayNext(Printers) ? ',' : '\n');
+	if (DefaultPrinter)
+	  cupsFilePrintf(fp, "_default:use=%s\n", DefaultPrinter->name);
 
-          if (DefaultPrinter)
-	    cupsFilePrintf(fp, "_default:use=%s\n", DefaultPrinter->name);
-
-	  for (p = (cupsd_printer_t *)cupsArrayFirst(Printers);
-	       p;
-	       p = (cupsd_printer_t *)cupsArrayNext(Printers))
-	    cupsFilePrintf(fp, "%s:\\\n"
-	        	       "\t:bsdaddr=%s,%s:\\\n"
-			       "\t:description=%s:\n",
-		           p->name, ServerName, p->name,
-			   p->info ? p->info : "");
-          break;
-    }
+	for (p = (cupsd_printer_t *)cupsArrayFirst(Printers);
+	     p;
+	     p = (cupsd_printer_t *)cupsArrayNext(Printers))
+	  cupsFilePrintf(fp, "%s:\\\n"
+			     "\t:bsdaddr=%s,%s:\\\n"
+			     "\t:description=%s:\n",
+			 p->name, ServerName, p->name,
+			 p->info ? p->info : "");
+	break;
   }
 
  /*
