@@ -1,9 +1,11 @@
-CHANGES.txt - 2009-01-15
+CHANGES.txt - 2009-01-19
 ------------------------
 
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- The scheduler incorrectly created an empty org.cups.printers.plist
+	  file on Mac OS X.
 	- cupsGetPPD3() did not look for local PPDs in the right directory.
 	- SNMP lookups via side-channel did not work for NULL-VALUE and
 	  and OCTET-STRING OIDs containing nul characters.
